<?xml version="1.0"?>
<package format="3">
  <name>topic_flow_cpp</name>
  <version>0.0.0</version>
  <description>Small C++ nodes for learning ROS 2 topic data flow.</description>
  <maintainer email="lingyi@example.com">Lingyi</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
